--- a/templates/moneyline/index.html.twig
+++ b/templates/moneyline/index.html.twig
@@ -10,7 +10,11 @@
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
-    {{ fl }}, {{ dl }} <br />
+    {{ fl }}, {{ dl }} <br /><br />
+
+    Favorite Imppliod Odds: {{ fImp }} <br />
+    Dog Implied Odds: {{ dImp }} <br /><br />
+
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ '/home/benr242/PhpstormProjects/Moneyline/src/Controller/MoneylineController.php'|file_link(0) }}">src/Controller/MoneylineController.php</a></code></li>
