--- a/templates/moneyline/index.html.twig
+++ b/templates/moneyline/index.html.twig
@@ -15,6 +15,10 @@
     Favorite Imppliod Odds: {{ fImp }} <br />
     Dog Implied Odds: {{ dImp }} <br /><br />
 
+    Favorite Odds: {{ fOdds }}<br />
+    Dog Odds: {{ dOdds }}<br />
+    Total: {{ fOdds + dOdds }}<br /><br />
+
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ '/home/benr242/PhpstormProjects/Moneyline/src/Controller/MoneylineController.php'|file_link(0) }}">src/Controller/MoneylineController.php</a></code></li>
