--- a/templates/moneyline/index.html.twig
+++ b/templates/moneyline/index.html.twig
@@ -13,8 +13,8 @@
     {{ fl }}, {{ dl }} <br /><br />
 
     Favorite Imppliod Odds: {{ fImp }} <br />
-    Dog Implied Odds: {{ dImp }} <br /><br />
-
+    Dog Implied Odds: {{ dImp }} <br />
+    Total: {{ fImp + dImp }}<br /><br />
     Favorite Odds: {{ fOdds }}<br />
     Dog Odds: {{ dOdds }}<br />
     Total: {{ fOdds + dOdds }}<br /><br />
