--- a/templates/moneyline/index.html.twig
+++ b/templates/moneyline/index.html.twig
@@ -10,6 +10,7 @@
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
+
     {{ fl }}, {{ dl }} <br /><br />
 
     Favorite Imppliod Odds: {{ fImp }} <br />
@@ -19,10 +20,6 @@
     Dog Odds: {{ dOdds }}<br />
     Total: {{ fOdds + dOdds }}<br /><br />
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/benr242/PhpstormProjects/Moneyline/src/Controller/MoneylineController.php'|file_link(0) }}">src/Controller/MoneylineController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/benr242/PhpstormProjects/Moneyline/templates/moneyline/index.html.twig'|file_link(0) }}">templates/moneyline/index.html.twig</a></code></li>
-    </ul>
+    TestIP: {{ tip }}
 </div>
 {% endblock %}
